tests/NormalTests/paczka1/fuzzy1/72811664.err
Error in line 9: xAxlnu1Twg S779 73,4
Error in line 6: S779 S971 58,1
Error in line 18: 5yrkHS S971 64,3
Error in line 8: mGwjaQMsR A832 93,5
Error in line 19: S779 A866 15,4
Error in line 29: xAxlnu1Twg A832 61,1
Error in line 38: 5hh3W S779 6,2
